changed the form background and fixed the alignment

--- a/altstyles/general.css
+++ b/altstyles/general.css
@@ -138,14 +138,20 @@ strong {
 	box-shadow: 10px 10px 5px #888888;
 }
 .content-buttom{
-	margin-left: 250px;
+	background: -moz-linear-gradient(top, #b4ddb4 0%, #83c783 17%, #52b152 33%, #008a00 67%, #005700 83%, #002400 100%); 
+	background: -webkit-linear-gradient(top, #b4ddb4 0%,#83c783 17%,#52b152 33%,#008a00 67%,#005700 83%,#002400 100%); 
+	background: linear-gradient(to bottom, #b4ddb4 0%,#83c783 17%,#52b152 33%,#008a00 67%,#005700 83%,#002400 100%); 
+	border-radius: 20px;
+	margin-left: 300px;
 	background-color:#a0d8a6;
 	width:850px;
 	border:none;
 	float: left;
 	box-sizing: border-box;
+	margin-top: 20px;
 	margin-bottom: 100px;
 	padding : 10px;
+	
 }
 
 .container {
